# Satan

./: Cargo.toml  README.md  cargo-check.json  coisas a fazer  identidade.txt  write_crypto.py
documentos_lidos/: arquivo_aberto.txt
src/: crypto.rs  frontend.rs  main.rs
vault/: 17829751-6b23-4715-aafa-547855556f56.enc  2bf213c2-7368-4c71-9473-6f799d9194e2.enc  ad47a4b2-766e-4d2f-a77a-03d5c82d6ab0.enc
